# aiohttp-tictactoe

./: .gitignore  Dockerfile  Makefile  README.md  db_init.py  dev.Dockerfile  dev.docker-compose.yml  docker-compose.yml  nginx.docker.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 01131823dbfb_rename_users_table_to_user.py  2e023f3252a8_first_migration.py  6c2452322fd1_first_migration.py  846f48a4a670_rename_tables.py  b8a44b582e9e_first_migration.py  e7093b1fa15c_first_migration.py  f8e40a2518df_rename_tables.py
config/: dev_example.yaml  gunicorn.py
docker/: init.sql
nginx/conf.d/: web.conf
scripts/: create_db_container.sh  prestart.sh  runserver.sh
server/: main.py  middleware.py  models.py  settings.py
server/api/: routes.py
server/api/endpoints/: auth.py  details.py  game.py  index.py
server/db/: auth.py  database.py  security.py
server/models/: base.py  entities.py
server/schemas/validators/: user.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py
