[tool.poetry]
name = "aiohttp-tictactoe"
version = "0.1.0"
description = "Demo tictactoe game api"
authors = ["LehaDurotar <hwick1396@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# Server side
gunicorn = "^20.0.4"
uvloop = "^0.14.0"
aiohttp = "^3.7.3"
# Database
alembic = "^1.4.3"
aiopg = "^1.1.0"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.36.8"
gino = "^1.0.1"
# Mics
bcrypt = "^3.2.0"
loguru = "^0.5.3"
PyYAML = "^5.3.1"
# Data validation
pydantic = "^1.7.3"


[tool.poetry.dev-dependencies]
# Linting, formatter, tests
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.1"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 110
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic
    | data
  )/
)
'''

[tool.isort]
length_sort = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 110
